# Unrealify

./: .replit  Contribute.MD  README.md  pyproject.toml
SRC/: AddFeatureToBite.py  AutomaticMain.py  Configuration.yaml  Console.py  FontTest.py  InstallModules.py  Mactest.py  Main.py  RecursiveImageFinder.py  SkipLoad.py  UnitTest.py
SRC/Bites/: AddFeature.py  Readme.md
SRC/Bites/Blueprints/: _Example.yaml
SRC/Bites/Blueprints/TimelineWithAlpha/: Details.yaml  TimeLine.txt
SRC/Bites/Blueprints/_Example/: Template.yaml
SRC/Bites/C++/ClassCreationFixer/: Details.yaml
SRC/Bites/C++/Test/: Details.yaml
SRC/Bites/C++/TimeLineExample/: Details.yaml
SRC/Bites/Misc/GitAttributesTemplate/: Details.yaml
SRC/Bites/Misc/GitIgnoreTemplate/: Details.yaml
SRC/Bites/Misc/ImageResizer/: Details.yaml
SRC/Bites/_Example/: Details.yaml
SRC/Data/: Projects.yaml  UnrealifyProjectTemplate.yaml
SRC/Handlers/: BeautifulSoupHandler.py  Incrementer.py  KeyStrokeHandler.py  KeyStrokeWrapper.py  MoodifierHandler.py  PopUpHandler.py  ProgressHandler.py  SettingsHandler.py  SplashHandler.py  Test.py  ToggleSwitch.py  UIHandler.py
SRC/Handlers/UI/: BitesTemplatePane.py  BlueprintsPane.py  CPPPane.py  DashboardPane.py  InfoPane.py  MiscPane.py  SettingsPane.py  TemplatePane.py
SRC/Handlers/UIComponents/: BitesWindow.py  BottomBar.py  IncrementSlider.py  Incrementer.py  ProjectWindow.py  ScrollPane.py  Slider.py  ToggleSwitch.py  TransitionalButton.py  Usefuls.py
SRC/Outputs/: 2022_05_25_17_35_54.txt  2022_05_25_17_38_44.txt  2022_05_25_22_28_20.txt  2022_06_01_21_53_12.txt
(+6 files in other folders)
