[tool.poetry]
name = "repl_python3_beta_UnrealCppImportHelper"
version = "0.1.0"
description = ""
authors = ["Mootbing <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
pynput = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
